<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_red"
    tools:context=".MenuActivity">

    <!-- Top section with date and quote -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="173dp"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/card_background"
            app:cardCornerRadius="8dp"
            app:cardElevation="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_date"
                    android:layout_width="302dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:textColor="@color/card_text_color"
                    android:textSize="30sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toTopOf="@+id/textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="8dp"
                    android:text="@string/quote_1"
                    android:textColor="@color/card_text_color"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_date" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <!-- Card View 1: Timer -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toStartOf="@+id/card_view2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/image_view_timer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:padding="2dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_timer_red_250dp" />

        <TextView
            android:id="@+id/text_pomodoro_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="1dp"
            android:text="@string/str_menu_pomodoro_timer"
            android:textAlignment="center"
            android:textColor="@color/card_text_color" />
    </androidx.cardview.widget.CardView>

    <!-- Card View 2: Planner -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_view1"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/image_view_planner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:padding="2dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_date_range_red_250dp" />

        <TextView
            android:id="@+id/text_pomodoro_planner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="1dp"
            android:text="@string/str_menu_pomodoro_planner"
            android:textAlignment="center"
            android:textColor="@color/card_text_color" />
    </androidx.cardview.widget.CardView>

    <!-- Card View 3: Statistics -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toStartOf="@+id/card_view4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view1">

        <ImageView
            android:id="@+id/image_view_statistics"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:padding="2dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_insert_chart_red_250dp" />

        <TextView
            android:id="@+id/text_statistics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="1dp"
            android:text="@string/str_menu_statistics"
            android:textAlignment="center"
            android:textColor="@color/card_text_color" />
    </androidx.cardview.widget.CardView>

    <!-- Card View 4: Music -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view4"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_view3"
        app:layout_constraintTop_toBottomOf="@+id/card_view2">

        <ImageView
            android:id="@+id/image_view_music"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:padding="2dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_queue_music_red_250dp" />

        <TextView
            android:id="@+id/text_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="1dp"
            android:text="@string/str_menu_connect_spotify"
            android:textAlignment="center"
            android:textColor="@color/card_text_color" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
